--- a/css/StyleSheet.css
+++ b/css/StyleSheet.css
@@ -1,15 +1,15 @@
-﻿﻿html,
+﻿
 body {
-    margin: 0;
     height: 100%;
-    overflow: hidden;
-}
-
-body {
-    background-image: url("/images/nodes.png");
+    width: 100%;
+    margin: 0;
+    border: 0;
+    padding: 0;
+    background-image: url('/images/nodes.png');
+    background-position: center center;
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
 }
 
 .top {
@@ -52,4 +52,14 @@ body {
     position: absolute;
     top: 84.9%;
     left: 51.9%;
+}
+
+#powerlifting {
+    position: absolute;
+    top: 35.7%;
+    left: 7.5%;
+}
+
+.green-node {
+    color: darkgreen;
 }
