--- a/css/StyleSheet.css
+++ b/css/StyleSheet.css
@@ -35,7 +35,7 @@ body {
 }
 
 .node {
-    background-color: darkgreen;
+    background-color: seagreen;
     border: none;
     padding: 5px;
     display: inline-block;
@@ -60,6 +60,18 @@ body {
     left: 7.5%;
 }
 
+#tictactoe {
+    position: absolute;
+    top: 23.4%;
+    left: 51.2%;
+}
+
+#website {
+    position: absolute;
+    top: 58.9%;
+    left: 62.8%;
+}
+
 .green-node {
-    color: darkgreen;
+    color: seagreen;
 }
